<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/questionTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#666"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/draw_lines"
        android:textColor="@color/white"
        android:textSize="18sp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/editModeActions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageButton
                android:id="@+id/selectButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:elevation="2dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_select"
                app:backgroundTint="@color/button_selector"
                app:tint="@color/color_selector" />

            <ImageButton
                android:id="@+id/lineButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:elevation="2dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_draw_line"
                app:backgroundTint="@color/button_selector"
                app:tint="@color/color_selector" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/selectModeActions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:elevation="2dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_trash"
                app:backgroundTint="@color/button_selector"
                app:tint="@color/color_selector" />

            <ImageButton
                android:id="@+id/cancelSelectModeButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:elevation="2dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_cancel"
                app:backgroundTint="@color/button_selector"
                app:tint="@color/color_selector" />
        </LinearLayout>

        <Button
            android:id="@+id/correctBtn"
            style="@style/submit"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:text="@string/save"
            tools:ignore="ButtonStyle" />

    </RelativeLayout>

    <SeekBar
        android:id="@+id/strokeWidthSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:max="20"
        android:padding="10dp"
        android:progress="10"
        android:visibility="gone"

        />

    <nayan.android.drawline.OverlayPhotoView
        android:id="@+id/overlayPhotoView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="centerInside" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/editControlLL"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/redoBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="1dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/redo"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/undoBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/undo"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lineControlLL"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/cancelLineButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="1dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/cancel"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/finalButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/done"
                android:textColor="@color/white" />

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>